--- a/Digit_identifier/Digit.ipynb
+++ b/Digit_identifier/Digit.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,91 +390,48 @@
      ]
     }
    ],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "from tensorflow.keras.models import load_model\n",
-    "import matplotlib.pyplot as plt\n",
-    "import string\n",
-    "\n",
-    "# Load trained model\n",
-    "model = load_model('trained_model.h5')\n",
-    "\n",
-    "def segment_digits_with_labels(image_path):\n",
-    "    image = cv2.imread(image_path)  # Read in color (BGR) to allow colored labels\n",
-    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)  # Convert to grayscale for processing\n",
-    "    _, thresh = cv2.threshold(gray, 128, 255, cv2.THRESH_BINARY_INV)\n",
-    "    contours, _ = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "\n",
-    "    digits = []\n",
-    "    labels = string.ascii_uppercase  # Excel column labels (A, B, C, D, ...)\n",
-    "    label_index = 0  # Start with 'A'\n",
-    "\n",
-    "    for contour in contours:\n",
-    "        x, y, w, h = cv2.boundingRect(contour)\n",
-    "        if w > 10 and h > 10:\n",
-    "            digit_image = gray[y:y+h, x:x+w]\n",
-    "            digit_image_resized = cv2.resize(digit_image, (28, 28))\n",
-    "            digit_image_normalized = digit_image_resized / 255.0\n",
-    "            digit_image_normalized = digit_image_normalized.reshape(1, 28, 28, 1)\n",
-    "\n",
-    "            prediction = model.predict(digit_image_normalized)\n",
-    "            predicted_digit = np.argmax(prediction)\n",
-    "\n",
-    "            # Label the bounding box with Excel column labels\n",
-    "            label = labels[label_index] if label_index < len(labels) else 'Z'\n",
-    "            digits.append((predicted_digit, label, (x, y, w, h)))\n",
-    "\n",
-    "            # Draw the bounding box\n",
-    "            cv2.rectangle(image, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
-    "\n",
-    "            # Draw label above the box\n",
-    "            cv2.putText(image, label, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 0, 0), 2)\n",
-    "\n",
-    "            # Draw predicted digit below the box\n",
-    "            cv2.putText(image, str(predicted_digit), (x, y + h + 20), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 255), 2)\n",
-    "\n",
-    "            label_index += 1  # Move to the next label\n",
-    "\n",
-    "    return image, digits\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ WARN:0@18563.985] global loadsave.cpp:268 findDecoder imread_('/Users/rfalcao/Documents/FYP/Digit_identifier/TestSeq2.jpg'): can't open/read file: check file path/integrity\n"
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
      ]
     },
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.11.0) /Users/xperience/GHA-Actions-OpenCV/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:199: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n",
+     "ename": "TypeError",
+     "evalue": "DigitSegmenter.segment_digits_with_labels() got an unexpected keyword argument 'padding'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[33], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m image_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/rfalcao/Documents/FYP/Digit_identifier/TestSeq2.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m segmented_image, predicted_digits \u001b[38;5;241m=\u001b[39m \u001b[43msegment_digits_with_labels\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Display the result\u001b[39;00m\n\u001b[1;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(segmented_image, cmap\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgray\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[31], line 12\u001b[0m, in \u001b[0;36msegment_digits_with_labels\u001b[0;34m(image_path)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msegment_digits_with_labels\u001b[39m(image_path):\n\u001b[1;32m     11\u001b[0m     image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(image_path)  \u001b[38;5;66;03m# Read in color (BGR) to allow colored labels\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m     gray \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_BGR2GRAY\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Convert to grayscale for processing\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     _, thresh \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mthreshold(gray, \u001b[38;5;241m128\u001b[39m, \u001b[38;5;241m255\u001b[39m, cv2\u001b[38;5;241m.\u001b[39mTHRESH_BINARY_INV)\n\u001b[1;32m     14\u001b[0m     contours, _ \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mfindContours(thresh, cv2\u001b[38;5;241m.\u001b[39mRETR_EXTERNAL, cv2\u001b[38;5;241m.\u001b[39mCHAIN_APPROX_SIMPLE)\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.11.0) /Users/xperience/GHA-Actions-OpenCV/_work/opencv-python/opencv-python/opencv/modules/imgproc/src/color.cpp:199: error: (-215:Assertion failed) !_src.empty() in function 'cvtColor'\n"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m image_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/rfalcao/FYP/Digit_identifier/TestSeq2.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Segment digits\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m segmented_image, predicted_digits \u001b[38;5;241m=\u001b[39m \u001b[43msegmenter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msegment_digits_with_labels\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43mpadding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Display result\u001b[39;00m\n\u001b[1;32m     13\u001b[0m segmenter\u001b[38;5;241m.\u001b[39mdisplay_image(segmented_image)\n",
+      "\u001b[0;31mTypeError\u001b[0m: DigitSegmenter.segment_digits_with_labels() got an unexpected keyword argument 'padding'"
      ]
     }
    ],
    "source": [
-    "image_path = '/Users/rfalcao/Documents/FYP/Digit_identifier/TestSeq2.jpg'\n",
     "\n",
-    "segmented_image, predicted_digits = segment_digits_with_labels(image_path)\n",
     "\n",
-    "# Display the result\n",
-    "plt.imshow(segmented_image, cmap='gray')\n",
-    "plt.axis('off')\n",
-    "plt.show()\n",
+    "from Digit_Segmenter import DigitSegmenter\n",
+    "\n",
+    "# Initialize with the trained model path\n",
+    "segmenter = DigitSegmenter('trained_model.h5')\n",
+    "\n",
+    "# Path to the image you want to process\n",
+    "image_path = '/Users/rfalcao/FYP/Digit_identifier/TestSeq2.jpg'\n",
+    "\n",
+    "# Segment digits\n",
+    "segmented_image, predicted_digits = segmenter.segment_digits_with_labels(image_path,padding=10)\n",
+    "\n",
+    "# Display result\n",
+    "segmenter.display_image(segmented_image)\n",
     "\n",
     "# Print predicted digits with their Excel-like labels\n",
     "for digit, label, position in predicted_digits:\n",
