--- a/Segmentation/Cusp_Identifier.ipynb
+++ b/Segmentation/Cusp_Identifier.ipynb
@@ -246,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "556f0b02bb2743b6977f8c217cfc5494",
+       "model_id": "9b681ba2da574b83b022cbfe356afc1d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +304,7 @@
     "            image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "            \n",
     "            plt.figure(figsize=(6, 6))\n",
-    "            plt.title(f\"Does this image have clear cusps? \\nFilename: {image.shape}\")\n",
+    "            plt.title(f\"Does this image have clear cusps? \\nFilename: {filename}\")\n",
     "            plt.imshow(image, cmap='gray')\n",
     "            plt.axis('off')\n",
     "            plt.show()\n",
@@ -370,13 +370,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1785, 2560)\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc1350b497ec4202b8f1e5bacfcdf306",
+       "model_id": "95ac53cf36fc4332a074ec4f6f3aad4e",
        "version_major": 2,
        "version_minor": 0
       },
