--- a/Segmentation/Cusp_Segmenter_manual_Tool2.ipynb
+++ b/Segmentation/Cusp_Segmenter_manual_Tool2.ipynb
@@ -9,67 +9,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import json\n",
     "import os\n",
+    "import numpy as np\n",
     "\n",
     "# Load annotations\n",
-    "with open(\"Manual_Cusp_Boxes.json\") as f:\n",
+    "with open(\"/Users/rfalcao/Documents/FYP/Cusp Images_081224/boxes_2.json\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
-    "image_dir = \"/Users/rfalcao/Documents/FYP/ClearCuspsCroppedRotated\"\n",
-    "output_dir = \"/Users/rfalcao/Documents/FYP/ManualSegmentation\"\n",
+    "image_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Clear\"\n",
+    "output_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Boxed\"\n",
     "\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# Process each image\n",
     "for img_info in data[\"images\"]:\n",
     "    img_path = os.path.join(image_dir, img_info[\"file_name\"])\n",
     "    img = cv2.imread(img_path)\n",
-    "    # Find annotations for this image\n",
+    "\n",
+    "    if img is None:\n",
+    "        print(f\"Could not read image: {img_info['file_name']}\")\n",
+    "        continue\n",
+    "\n",
     "    for ann in data[\"annotations\"]:\n",
-    "        if ann[\"image_id\"] == img_info[\"id\"]:\n",
-    "            x, y, w, h = ann[\"bbox\"]  # COCO format: x, y, width, height\n",
-    "            cropped = img[int(y):int(y+h), int(x):int(x+w)]\n",
-    "            \n",
-    "            # Save cropped region\n",
-    "            save_path = os.path.join(output_dir, f\"cusp_{ann['id']}.jpg\")\n",
-    "            cv2.imwrite(save_path, cropped)\n"
+    "        if ann[\"image_id\"] != img_info[\"id\"]:\n",
+    "            continue\n",
+    "\n",
+    "        x, y, w, h = ann[\"bbox\"]\n",
+    "        angle = ann[\"attributes\"].get(\"rotation\", 0)\n",
+    "\n",
+    "        center = (x + w / 2, y + h / 2)\n",
+    "\n",
+    "        # Get rotation matrix\n",
+    "        M = cv2.getRotationMatrix2D(center, angle, 1.0)\n",
+    "\n",
+    "        # Warp the image (rotate around the bbox center)\n",
+    "        rotated = cv2.warpAffine(img, M, (img.shape[1], img.shape[0]), flags=cv2.INTER_CUBIC)\n",
+    "\n",
+    "        # Now crop the box from the rotated image\n",
+    "        x1 = int(center[0] - w / 2)\n",
+    "        y1 = int(center[1] - h / 2)\n",
+    "        x2 = int(center[0] + w / 2)\n",
+    "        y2 = int(center[1] + h / 2)\n",
+    "\n",
+    "        # Clamp to image boundaries\n",
+    "        x1 = max(0, x1)\n",
+    "        y1 = max(0, y1)\n",
+    "        x2 = min(rotated.shape[1], x2)\n",
+    "        y2 = min(rotated.shape[0], y2)\n",
+    "\n",
+    "        if x2 > x1 and y2 > y1:\n",
+    "            cropped = rotated[y1:y2, x1:x2]\n",
+    "            save_path = os.path.join(output_dir, f\"cusp_{ann['id']}.png\")\n",
+    "            cv2.imwrite(save_path, cropped)\n",
+    "        else:\n",
+    "            print(f\"Invalid rotated crop for annotation {ann['id']} in {img_info['file_name']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import json\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load annotations\n",
+    "with open(\"/Users/rfalcao/Documents/FYP/Cusp Images_081224/boxes_2.json\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "image_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Clear\"\n",
+    "\n",
+    "# Loop through images\n",
+    "for img_info in data[\"images\"]:\n",
+    "    img_path = os.path.join(image_dir, img_info[\"file_name\"])\n",
+    "    img = cv2.imread(img_path)\n",
+    "\n",
+    "    if img is None:\n",
+    "        print(f\"Could not read image: {img_info['file_name']}\")\n",
+    "        continue\n",
+    "\n",
+    "    img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)  # Convert to RGB for matplotlib\n",
+    "    img_copy = img_rgb.copy()\n",
+    "\n",
+    "    for ann in data[\"annotations\"]:\n",
+    "        if ann[\"image_id\"] != img_info[\"id\"]:\n",
+    "            continue\n",
+    "\n",
+    "        x, y, w, h = ann[\"bbox\"]\n",
+    "        angle = ann[\"attributes\"].get(\"rotation\", 0)\n",
+    "\n",
+    "        center = (x + w / 2, y + h / 2)\n",
+    "        size = (w, h)\n",
+    "\n",
+    "        # Create rotated rectangle and get 4 points\n",
+    "        rect = (center, size, angle)\n",
+    "        box = cv2.boxPoints(rect)\n",
+    "        box = np.intp(box)\n",
+    "\n",
+    "        # Draw the rotated box\n",
+    "        cv2.drawContours(img_copy, [box], 0, (0, 255, 0), 2)\n",
+    "        cv2.putText(img_copy, f\"ID {ann['id']}\", (int(x), int(y - 10)),\n",
+    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 0, 0), 1)\n",
+    "\n",
+    "    # Display using matplotlib\n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "    plt.imshow(img_copy)\n",
+    "    plt.title(f\"Image: {img_info['file_name']}\")\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Optional: break after showing a few images\n",
+    "    # break  # Uncomment to preview only the first one\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Separate Images into new categories"
+    "Separate Images into new categories, assuming you have non cusp examples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Images sorted successfully!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
     "import shutil\n",
     "\n",
     "# Paths\n",
-    "image_dir = \"/Users/rfalcao/Documents/FYP/ManualSegmentation\"  # Folder containing all images\n",
-    "annotation_file = \"/Users/rfalcao/Documents/FYP/ManualSegmentationAnns/instances_default.json\"  # Exported JSON file\n",
-    "output_dir = \"/Users/rfalcao/Documents/FYP/ManualSegmentationAnns\"\n",
+    "image_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Clear\"  # Folder containing all images\n",
+    "annotation_file = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/instances_default.json\"  # Exported JSON file\n",
+    "output_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224\"\n",
     "\n",
     "# Create output folders\n",
     "os.makedirs(f\"{output_dir}/cusp_images\", exist_ok=True)\n",
@@ -114,21 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading annotations into memory...\n",
-      "Done (t=0.06s)\n",
-      "creating index...\n",
-      "index created!\n",
-      "Masks extracted and saved!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pycocotools.coco import COCO\n",
     "import numpy as np\n",
@@ -136,10 +206,10 @@
     "import os\n",
     "\n",
     "# Paths\n",
-    "annotation_file = \"/Users/rfalcao/Documents/FYP/ManualSegmentationAnns/instances_default.json\"\n",
-    "image_dir = \"/Users/rfalcao/Documents/FYP/ManualSegmentationAnns/cusp_images\"\n",
-    "mask_output_dir = \"/Users/rfalcao/Documents/FYP/ManualSegmentationAnns/masks\"\n",
-    "untagged_image_dir = \"/Users/rfalcao/Documents/FYP/ManualSegmentationAnns/non_cusp_images\"\n",
+    "annotation_file = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Run_1/instances_default.json\"\n",
+    "image_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Run_1/cusp_images\"\n",
+    "mask_output_dir = \"/Users/rfalcao/Documents/FYP/Cusp Images_081224/Run_1/masks\"\n",
+    "untagged_image_dir = \"/Users/rfalcao/Documents/FYPCusp Images_081224/Run_1/non_cusp_images\"\n",
     "\n",
     "os.makedirs(mask_output_dir, exist_ok=True)\n",
     "\n",
@@ -151,10 +221,13 @@
     "    img_info = coco.loadImgs(img_id)[0]\n",
     "    img_filename = img_info[\"file_name\"]\n",
     "\n",
+    "    # Ensure proper mask filename (change .jpg to .png)\n",
+    "    # mask_filename = os.path.splitext(img_filename)[0] + \".png\"\n",
+    "    mask_filepath = os.path.join(mask_output_dir, mask_filename)\n",
+    "\n",
     "    # Try loading from cusp images folder\n",
     "    img_path = os.path.join(image_dir, img_filename)\n",
     "    if not os.path.exists(img_path):\n",
-    "        # If not found, check no-cusp images folder\n",
     "        img_path = os.path.join(untagged_image_dir, img_filename)\n",
     "\n",
     "    img = cv2.imread(img_path, cv2.IMREAD_GRAYSCALE)\n",
@@ -177,27 +250,18 @@
     "                points = np.array(seg, dtype=np.int32).reshape(-1, 2)\n",
     "                cv2.fillPoly(mask, [points], 255)  # Fill the polygon mask\n",
     "\n",
-    "    # Save the mask (even if empty, for no-cusp cases)\n",
-    "    mask_filename = os.path.join(mask_output_dir, img_filename)\n",
-    "    cv2.imwrite(mask_filename, mask)\n",
+    "    # Save mask as PNG (lossless format)\n",
+    "    cv2.imwrite(mask_filepath, mask)\n",
     "\n",
-    "print(\"Masks extracted and saved!\")\n"
+    "print(\"✅ Masks extracted and saved as PNGs!\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max dimensions for padding: 870x851\n",
-      "✅ Padding complete! All cusp images and masks are now the same size.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -254,6 +318,13 @@
     "\n",
     "print(\"✅ Padding complete! All cusp images and masks are now the same size.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
