--- a/Segmentation/Cusp_Identifier_Tool1.ipynb
+++ b/Segmentation/Cusp_Identifier_Tool1.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/rfalcao/anaconda3/envs/tf-m2/bin/python\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -43,28 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Images (translation):   0%|          | 0/44 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Images (translation): 100%|██████████| 44/44 [04:05<00:00,  5.57s/it]"
+      "Processing Images (crop_only): 100%|██████████| 168/168 [01:55<00:00,  1.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rotation Angles: {'12.tif': -3, '8 (1).tif': 87, '2b_i_i_2_1000x.tif': -48, 'FM024_3_a_i_AOI4_5000x.tif': -2, '11.tif': -25, '2b_iii_ii_5_1000x.tif': 36, 'RT_dry_1mmmin_500x.tif': -89, '5 (2).tif': 12, '15.tif': -5, '90C_dry_0.1mmmin_500x.tif': -89, '6 (4).tif': -1, 'FM024_3_a_i_AOI4_1500x.tif': -3, '90C_dry_100mmmin_500x.tif': 3, '-55C_dry_1mmmin_1000x.tif': -88, '-55C_wet_1mmmin_500x.tif': 2, 'FM024_3_a_i_AOI8_1300x.tif': 6, 'RT_500x.tif': -89, '11 (1).tif': -2, '6 (3).tif': -8, '90C_dry_100mmmin_1000x.tif': 2, '2 (1).tif': -85, '2bi_iii_4_1000x.tif': -64, 'FM024_1_d_i_flatbed_ML1_1_atTTR_2000x_45degtilt.tif': 3, 'FM024_3_e_i_flatbed_ML1_2_1000x_45degtilt.tif': 37, '6 (1).tif': 12, '11 (3).tif': 1, 'FM024_1_b_ii_delam2_ML1_1_1300x.tif': 21, 'FM024_1_b_ii_delam2_ML1_3_400x.tif': -8, '1.tif': -26, '23 (1).tif': -6, '5.tif': -89, '11 (2).tif': -6, '90C_dry_0.1mmmin_1000x.tif': 87, '2b_i_ii_2_2000x.tif': -88, '26.tif': -6, '25.tif': -6, '24.tif': -5, '18.tif': 8, '2b_iii_i_3_2000x.tif': -53, 'FM024_3_a_i_AOI4_5000x_q2.png': 3, '23.tif': 89, 'FM024_3_a_i_AOI4_5000x_q3.png': -73, 'CT_dry_90C_5000x_15tilt_90degreefibres.tif': -88, 'FM024_3_e_i_flatbed_ML1_1_2000x_45degtilt.tif': 2}\n"
+      "Rotation Angles: {'E_13.png': 0, 'B_26.png': 0, 'E_2.png': 0, 'C_4.png': 0, 'D_47.png': 0, 'D_53.png': 0, 'A_6.png': 0, 'A_7.png': 0, 'D_52.png': 0, 'D_46.png': 0, 'C_5.png': 0, 'E_3.png': 0, 'B_27.png': 0, 'E_12.png': 0, 'B_19.png': 0, 'E_10.png': 0, 'B_31.png': 0, 'B_25.png': 0, 'E_1.png': 0, 'C_7.png': 0, 'D_50.png': 0, 'D_44.png': 0, 'A_5.png': 0, 'A_4.png': 0, 'D_45.png': 0, 'D_51.png': 0, 'C_6.png': 0, 'B_24.png': 0, 'B_30.png': 0, 'B_18.png': 0, 'E_11.png': 0, 'B_20.png': 0, 'E_15.png': 0, 'E_4.png': 0, 'D_55.png': 0, 'D_41.png': 0, 'C_2.png': 0, 'A_1.png': 0, 'C_3.png': 0, 'D_40.png': 0, 'D_54.png': 0, 'E_5.png': 0, 'E_14.png': 0, 'B_21.png': 0, 'B_23.png': 0, 'E_16.png': 0, 'E_7.png': 0, 'D_42.png': 0, 'D_56.png': 0, 'C_1.png': 0, 'A_3.png': 0, 'A_2.png': 0, 'D_57.png': 0, 'D_43.png': 0, 'E_6.png': 0, 'E_17.png': 0, 'B_22.png': 0, 'A_14.png': 0, 'B_7.png': 0, 'D_18.png': 0, 'C_11.png': 0, 'D_1.png': 0, 'D_24.png': 0, 'D_30.png': 0, 'F_3.png': 0, 'F_2.png': 0, 'D_31.png': 0, 'D_25.png': 0, 'D_19.png': 0, 'C_10.png': 0, 'A_15.png': 0, 'B_6.png': 0, 'B_4.png': 0, 'A_17.png': 0, 'D_2.png': 0, 'C_12.png': 0, 'D_33.png': 0, 'D_27.png': 0, 'F_1.png': 0, 'D_26.png': 0, 'D_32.png': 0, 'C_13.png': 0, 'D_3.png': 0, 'B_5.png': 0, 'A_16.png': 0, 'A_12.png': 0, 'B_1.png': 0, 'D_36.png': 0, 'D_22.png': 0, 'D_7.png': 0, 'C_17.png': 0, 'F_5.png': 0, 'F_4.png': 0, 'C_16.png': 0, 'D_6.png': 0, 'D_23.png': 0, 'D_37.png': 0, 'A_13.png': 0, 'B_2.png': 0, 'A_11.png': 0, 'D_21.png': 0, 'D_35.png': 0, 'C_14.png': 0, 'D_4.png': 0, 'F_6.png': 0, 'F_7.png': 0, 'D_5.png': 0, 'C_15.png': 0, 'D_34.png': 0, 'D_20.png': 0, 'B_3.png': 0, 'A_10.png': 0, 'A_21.png': 0, 'D_39.png': 0, 'D_8.png': 0, 'D_11.png': 0, 'D_10.png': 0, 'D_9.png': 0, 'D_38.png': 0, 'A_20.png': 0, 'A_22.png': 0, 'D_12.png': 0, 'F_9.png': 0, 'F_8.png': 0, 'D_13.png': 0, 'A_23.png': 0, 'B_8.png': 0, 'D_17.png': 0, 'D_16.png': 0, 'B_9.png': 0, 'A_18.png': 0, 'D_14.png': 0, 'D_28.png': 0, 'D_29.png': 0, 'D_15.png': 0, 'A_19.png': 0, 'F_10.png': 0, 'B_13.png': 0, 'D_66.png': 0, 'D_67.png': 0, 'B_12.png': 0, 'E_19.png': 0, 'B_10.png': 0, 'E_8.png': 0, 'D_59.png': 0, 'D_65.png': 0, 'D_64.png': 0, 'D_58.png': 0, 'E_9.png': 0, 'E_18.png': 0, 'B_11.png': 0, 'B_15.png': 0, 'B_29.png': 0, 'E_20.png': 0, 'D_60.png': 0, 'D_48.png': 0, 'A_9.png': 0, 'A_8.png': 0, 'D_49.png': 0, 'D_61.png': 0, 'B_28.png': 0, 'B_14.png': 0, 'B_16.png': 0, 'D_63.png': 0, 'C_8.png': 0, 'D_62.png': 0, 'C_9.png': 0, 'B_17.png': 0}\n"
      ]
     },
     {
@@ -77,60 +85,184 @@
     {
      "data": {
       "text/plain": [
-       "{'12.tif': -3,\n",
-       " '8 (1).tif': 87,\n",
-       " '2b_i_i_2_1000x.tif': -48,\n",
-       " 'FM024_3_a_i_AOI4_5000x.tif': -2,\n",
-       " '11.tif': -25,\n",
-       " '2b_iii_ii_5_1000x.tif': 36,\n",
-       " 'RT_dry_1mmmin_500x.tif': -89,\n",
-       " '5 (2).tif': 12,\n",
-       " '15.tif': -5,\n",
-       " '90C_dry_0.1mmmin_500x.tif': -89,\n",
-       " '6 (4).tif': -1,\n",
-       " 'FM024_3_a_i_AOI4_1500x.tif': -3,\n",
-       " '90C_dry_100mmmin_500x.tif': 3,\n",
-       " '-55C_dry_1mmmin_1000x.tif': -88,\n",
-       " '-55C_wet_1mmmin_500x.tif': 2,\n",
-       " 'FM024_3_a_i_AOI8_1300x.tif': 6,\n",
-       " 'RT_500x.tif': -89,\n",
-       " '11 (1).tif': -2,\n",
-       " '6 (3).tif': -8,\n",
-       " '90C_dry_100mmmin_1000x.tif': 2,\n",
-       " '2 (1).tif': -85,\n",
-       " '2bi_iii_4_1000x.tif': -64,\n",
-       " 'FM024_1_d_i_flatbed_ML1_1_atTTR_2000x_45degtilt.tif': 3,\n",
-       " 'FM024_3_e_i_flatbed_ML1_2_1000x_45degtilt.tif': 37,\n",
-       " '6 (1).tif': 12,\n",
-       " '11 (3).tif': 1,\n",
-       " 'FM024_1_b_ii_delam2_ML1_1_1300x.tif': 21,\n",
-       " 'FM024_1_b_ii_delam2_ML1_3_400x.tif': -8,\n",
-       " '1.tif': -26,\n",
-       " '23 (1).tif': -6,\n",
-       " '5.tif': -89,\n",
-       " '11 (2).tif': -6,\n",
-       " '90C_dry_0.1mmmin_1000x.tif': 87,\n",
-       " '2b_i_ii_2_2000x.tif': -88,\n",
-       " '26.tif': -6,\n",
-       " '25.tif': -6,\n",
-       " '24.tif': -5,\n",
-       " '18.tif': 8,\n",
-       " '2b_iii_i_3_2000x.tif': -53,\n",
-       " 'FM024_3_a_i_AOI4_5000x_q2.png': 3,\n",
-       " '23.tif': 89,\n",
-       " 'FM024_3_a_i_AOI4_5000x_q3.png': -73,\n",
-       " 'CT_dry_90C_5000x_15tilt_90degreefibres.tif': -88,\n",
-       " 'FM024_3_e_i_flatbed_ML1_1_2000x_45degtilt.tif': 2}"
+       "{'E_13.png': 0,\n",
+       " 'B_26.png': 0,\n",
+       " 'E_2.png': 0,\n",
+       " 'C_4.png': 0,\n",
+       " 'D_47.png': 0,\n",
+       " 'D_53.png': 0,\n",
+       " 'A_6.png': 0,\n",
+       " 'A_7.png': 0,\n",
+       " 'D_52.png': 0,\n",
+       " 'D_46.png': 0,\n",
+       " 'C_5.png': 0,\n",
+       " 'E_3.png': 0,\n",
+       " 'B_27.png': 0,\n",
+       " 'E_12.png': 0,\n",
+       " 'B_19.png': 0,\n",
+       " 'E_10.png': 0,\n",
+       " 'B_31.png': 0,\n",
+       " 'B_25.png': 0,\n",
+       " 'E_1.png': 0,\n",
+       " 'C_7.png': 0,\n",
+       " 'D_50.png': 0,\n",
+       " 'D_44.png': 0,\n",
+       " 'A_5.png': 0,\n",
+       " 'A_4.png': 0,\n",
+       " 'D_45.png': 0,\n",
+       " 'D_51.png': 0,\n",
+       " 'C_6.png': 0,\n",
+       " 'B_24.png': 0,\n",
+       " 'B_30.png': 0,\n",
+       " 'B_18.png': 0,\n",
+       " 'E_11.png': 0,\n",
+       " 'B_20.png': 0,\n",
+       " 'E_15.png': 0,\n",
+       " 'E_4.png': 0,\n",
+       " 'D_55.png': 0,\n",
+       " 'D_41.png': 0,\n",
+       " 'C_2.png': 0,\n",
+       " 'A_1.png': 0,\n",
+       " 'C_3.png': 0,\n",
+       " 'D_40.png': 0,\n",
+       " 'D_54.png': 0,\n",
+       " 'E_5.png': 0,\n",
+       " 'E_14.png': 0,\n",
+       " 'B_21.png': 0,\n",
+       " 'B_23.png': 0,\n",
+       " 'E_16.png': 0,\n",
+       " 'E_7.png': 0,\n",
+       " 'D_42.png': 0,\n",
+       " 'D_56.png': 0,\n",
+       " 'C_1.png': 0,\n",
+       " 'A_3.png': 0,\n",
+       " 'A_2.png': 0,\n",
+       " 'D_57.png': 0,\n",
+       " 'D_43.png': 0,\n",
+       " 'E_6.png': 0,\n",
+       " 'E_17.png': 0,\n",
+       " 'B_22.png': 0,\n",
+       " 'A_14.png': 0,\n",
+       " 'B_7.png': 0,\n",
+       " 'D_18.png': 0,\n",
+       " 'C_11.png': 0,\n",
+       " 'D_1.png': 0,\n",
+       " 'D_24.png': 0,\n",
+       " 'D_30.png': 0,\n",
+       " 'F_3.png': 0,\n",
+       " 'F_2.png': 0,\n",
+       " 'D_31.png': 0,\n",
+       " 'D_25.png': 0,\n",
+       " 'D_19.png': 0,\n",
+       " 'C_10.png': 0,\n",
+       " 'A_15.png': 0,\n",
+       " 'B_6.png': 0,\n",
+       " 'B_4.png': 0,\n",
+       " 'A_17.png': 0,\n",
+       " 'D_2.png': 0,\n",
+       " 'C_12.png': 0,\n",
+       " 'D_33.png': 0,\n",
+       " 'D_27.png': 0,\n",
+       " 'F_1.png': 0,\n",
+       " 'D_26.png': 0,\n",
+       " 'D_32.png': 0,\n",
+       " 'C_13.png': 0,\n",
+       " 'D_3.png': 0,\n",
+       " 'B_5.png': 0,\n",
+       " 'A_16.png': 0,\n",
+       " 'A_12.png': 0,\n",
+       " 'B_1.png': 0,\n",
+       " 'D_36.png': 0,\n",
+       " 'D_22.png': 0,\n",
+       " 'D_7.png': 0,\n",
+       " 'C_17.png': 0,\n",
+       " 'F_5.png': 0,\n",
+       " 'F_4.png': 0,\n",
+       " 'C_16.png': 0,\n",
+       " 'D_6.png': 0,\n",
+       " 'D_23.png': 0,\n",
+       " 'D_37.png': 0,\n",
+       " 'A_13.png': 0,\n",
+       " 'B_2.png': 0,\n",
+       " 'A_11.png': 0,\n",
+       " 'D_21.png': 0,\n",
+       " 'D_35.png': 0,\n",
+       " 'C_14.png': 0,\n",
+       " 'D_4.png': 0,\n",
+       " 'F_6.png': 0,\n",
+       " 'F_7.png': 0,\n",
+       " 'D_5.png': 0,\n",
+       " 'C_15.png': 0,\n",
+       " 'D_34.png': 0,\n",
+       " 'D_20.png': 0,\n",
+       " 'B_3.png': 0,\n",
+       " 'A_10.png': 0,\n",
+       " 'A_21.png': 0,\n",
+       " 'D_39.png': 0,\n",
+       " 'D_8.png': 0,\n",
+       " 'D_11.png': 0,\n",
+       " 'D_10.png': 0,\n",
+       " 'D_9.png': 0,\n",
+       " 'D_38.png': 0,\n",
+       " 'A_20.png': 0,\n",
+       " 'A_22.png': 0,\n",
+       " 'D_12.png': 0,\n",
+       " 'F_9.png': 0,\n",
+       " 'F_8.png': 0,\n",
+       " 'D_13.png': 0,\n",
+       " 'A_23.png': 0,\n",
+       " 'B_8.png': 0,\n",
+       " 'D_17.png': 0,\n",
+       " 'D_16.png': 0,\n",
+       " 'B_9.png': 0,\n",
+       " 'A_18.png': 0,\n",
+       " 'D_14.png': 0,\n",
+       " 'D_28.png': 0,\n",
+       " 'D_29.png': 0,\n",
+       " 'D_15.png': 0,\n",
+       " 'A_19.png': 0,\n",
+       " 'F_10.png': 0,\n",
+       " 'B_13.png': 0,\n",
+       " 'D_66.png': 0,\n",
+       " 'D_67.png': 0,\n",
+       " 'B_12.png': 0,\n",
+       " 'E_19.png': 0,\n",
+       " 'B_10.png': 0,\n",
+       " 'E_8.png': 0,\n",
+       " 'D_59.png': 0,\n",
+       " 'D_65.png': 0,\n",
+       " 'D_64.png': 0,\n",
+       " 'D_58.png': 0,\n",
+       " 'E_9.png': 0,\n",
+       " 'E_18.png': 0,\n",
+       " 'B_11.png': 0,\n",
+       " 'B_15.png': 0,\n",
+       " 'B_29.png': 0,\n",
+       " 'E_20.png': 0,\n",
+       " 'D_60.png': 0,\n",
+       " 'D_48.png': 0,\n",
+       " 'A_9.png': 0,\n",
+       " 'A_8.png': 0,\n",
+       " 'D_49.png': 0,\n",
+       " 'D_61.png': 0,\n",
+       " 'B_28.png': 0,\n",
+       " 'B_14.png': 0,\n",
+       " 'B_16.png': 0,\n",
+       " 'D_63.png': 0,\n",
+       " 'C_8.png': 0,\n",
+       " 'D_62.png': 0,\n",
+       " 'C_9.png': 0,\n",
+       " 'B_17.png': 0}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "aligner = ImageAlignment('/Users/rfalcao/Documents/Clear Cusps', '/Users/rfalcao/Documents/ClearCuspsCroppedRotated',False)\n",
-    "aligner.process_all_images(method=\"translation\") #Methods: 'fft' , 'radon', 'translation' , 'crop_only' , 'all"
+    "aligner = ImageAlignment('/Users/rfalcao/Documents/FYP/Cusp Images_081224/Unfiltered', '/Users/rfalcao/Documents/FYP/Cusp Images_081224/Clear',False)\n",
+    "aligner.process_all_images(method=\"crop_only\") #Methods: 'fft' , 'radon', 'translation' , 'crop_only' , 'all"
    ]
   },
   {
